# secret-share

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20250204000000_initial_schema.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/crypto/: encryption.rs  mod.rs  passphrase.rs
backend/src/db/: mod.rs  repository.rs  secrets.rs
backend/src/db/dynamodb/: mod.rs  secrets.rs
backend/src/db/postgres/: mod.rs  secrets.rs
backend/src/models/: secrets.rs
backend/src/routes/: mod.rs  secrets.rs
backend/src/services/: secrets.rs
backend/tests/: api_create_secret.rs  api_edge_cases.rs  api_retrieve_secret.rs  cleanup_expired.rs
backend/tests/integration/: dynamodb_context.rs  helpers.rs  mod.rs  postgres_context.rs  test_macro.rs
docs/plans/: 2026-02-04-ci-github-actions-design.md  2026-02-05-dynamodb-implementation.md  2026-02-05-dynamodb-support-design.md  2026-02-09-aws-lambda-deployment-design.md  2026-02-09-aws-lambda-deployment-plan.md  2026-02-10-ansible-vm-deployment-design.md  2026-02-10-ansible-vm-deployment-plan.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: global-setup.ts  global-teardown.ts  test-context.ts
e2e/tests/: create-secret.spec.ts  edge-cases.spec.ts  retrieve-secret.spec.ts
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.html
frontend/src/mocks/: navigation.ts  state.ts
infra/ansible/: deploy.yml  inventory.yml
infra/sam/: samconfig.toml  template.yaml
(+13 files in other folders)
