[package]
name = "secret-share-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Crypto
aes-gcm = "0.10"
rand = "0.9.2"
argon2 = "0.5"
base64 = "0.22.1"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Word list for passphrase
bip39 = "2.2.2"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# AWS SDK for DynamoDB
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.54"

# AWS Lambda runtime (optional, for serverless deployment)
lambda_http = { version = "0.14", optional = true }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
axum-test = "18.7.0"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "dynamodb"] }
reqwest = { version = "0.12", features = ["json"] }
paste = "1.0"

[features]
default = []
lambda = ["lambda_http"]
postgres-tests = []
dynamodb-tests = []
